  - Fix missing switch test, solving problem with unresearched slimefun items allowing bypass of switch protections.
    - Closes #4065.
  - Fix trying to load non-existant residents in the friendslist.
  - Remove unused plotManagementRevertSpeed from sql and townyworld.
  - Fix &k being allowed to be used in various things like titles/surnames/tags.
    - Closes #4270.
  - Remove unused & long-deprecated NameValidation settings from TownySettings.
  - Rearrange title and surname length test to occur after we've filtered out any characters we won't allow.
  - API: Add CombatUtil.isSameTown(Resident, Resident) and CombatUtil.isNameNation(Resident, Resident).
  - Clean up title and surname setting for towns and nations.
  - New Config Option: economy.new_expand.price_purchased_bonus_townblock_max_price
    - Default: -1.0
    - The maximum price that bonus townblocks can cost to purchase. Set to -1.0 to deactivate this maxium.
    - Closes #3788.
  - Fix /nation status screen never showing the nation board.
  - New Commands: /town set board none & /nation set board none.
    - Sets an empty board message.
    - Empty board messages are not shown on login and do not appear on the /town and /nation status screens.
    - Closes #4322.
  - Fix newday showing the wrong message when towns are bankrupted under some circumstances.
  - Removed no-longer-needed deleteUnusedFiles.
  - NewDayEvent now has removedTowns and bankruptTowns separated.
  - Language files bumped to 0.87.
  - Fix /ta town TOWNNAME withdraw displaying the correct message when a town is bankrupt and has hit the debtcap.
  - Add groupmanager and iconomy to the softdepend.
  - Add debt cap to town status screen when a town is bankrupt.
  - Fix mayors being able to alter the plot permissions of their residents on embassy plots in other towns.
    - Closes #4360.
  - Add support for colour codes in the plot line where players have coloured names.
    - Closes #4091.